--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         <img src="роблокс.jpg" alt="Роблокс" onclick="openModal('Роблокс', 'роблокс.jpg')">
         <img src="пушин.jpg" alt="Пушин" onclick="openModal('Пушин', 'пушин.jpg')">
         <img src="беар.jpg" alt="Мишки" onclick="openModal('Мишки', 'беар.jpg')">
+        <img src="хуги.jpg" alt="Хуги" onclick="openModal('Хуги', 'хуги.jpg')">
     </div>
     
     <div id="modal" class="modal">
