--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             padding: 20px;
         }
         .header img {
-            width: 50px;
-            height: 50px;
+            width: 80px;
+            height: 80px;
         }
         .images {
             display: flex;
@@ -83,6 +83,12 @@
         }
         .modal .cancel:hover {
             background-color: #c0392b;
+        }
+        .footer {
+            margin-top: 40px;
+            font-size: 24px;
+            font-weight: bold;
+            color: #2c3e50;
         }
     </style>
     <script>
@@ -149,6 +155,18 @@
         </select>
         <button id="orderButton">Отправить запрос</button>
         <button class="cancel" onclick="closeModal()">Отмена</button>
+    </div>
+
+    <div class="footer">
+        расписание:
+		понедельник	8:00	12:00	Мама жок
+вторник	9:00	12:00	Мама жок
+среда	8:00	13:00	Мама жок
+четверг	9:00	12:00	Мама жок
+пятница	8:00	12:00	Мама жок
+Суббота 	5:00	11:00	Мама бар
+воскресенье	5:00	11:00	Мама бар
+время	Не свободен	свободен	Маманын жумыса
     </div>
 </body>
 </html>
